# py_tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
py_tools/: __init__.py  pyproject.toml  requirements.txt  setup.py
py_tools/sys_tools/: __init__.py  extract_pdf.py  markdownthis.py  process_tree_python2.py  process_tree_python3.py  sys_tools.md
py_tools/sys_tools/files/: filer.py
py_tools/utils_candidates/: api_calls.py  bulk_emails_sender.py  daily_news.py  dataset_generator.py  email_header_checker.py  exif_cleaner.py  filter_text.py  organize_folders.py  port_scanner.py  python_code_checker.py  readme_generator.py  text_translator.py
py_tools/work_tools/: clean_text_urls.py  pomudora.py  ups_battery_calculator.py  work_tools.md
tests/: test_markthisdown.py
