[project]
name = "py_tools"
version = "0.1.0"
description = "A personal collection of useful Python scripts for various system and productivity tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "azure-ai-documentintelligence==1.0.0",
    "azure-core==1.32.0",
    "azure-identity==1.19.0",
    "beautifulsoup4==4.13.3",
    "bs4[extras]==0.0.2",
    "certifi[certs]==2025.1.31",
    "certifi[certs,roots]==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "cobble==0.1.4",
    "cryptography==44.0.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "et-xmlfile==2.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "isodate==0.7.2",
    "jiter==0.8.2",
    "lxml==5.3.1",
    "mammoth==1.9.0",
    "markdownify==0.14.1",
    "markitdown==0.0.1a4",
    "msal==1.31.1",
    "msal-extensions==1.2.0",
    "numpy==2.2.2",
    "olefile==0.47",
    "openai==1.61.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydub==0.25.1; sys_platform == 'win32'",
    "pydub==0.25.1; sys_platform == 'linux'",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-pptx==1.0.2",
    "pytz==2025.1",
    "requests[security]==2.32.3",
    "requests[security,socks]==2.32.3",
    "six==1.17.0",
    "soupsieve==2.6",
    "speechrecognition==3.14.1",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "xlrd==2.0.1",
    "xlsxwriter==3.2.2",
    "youtube-transcript-api==0.6.3",
    "pymupdf4llm>=0.0.17",
]
